update text and .readme

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <!--  -->
 <body>
   <div class="main_header"> 
-    <h1>Lorem ipsum dolor sit amet consectetur,</h1>
-    <p>Hey yagnik HERE</p>
+    <h1>Yagnik SCSS </h1>
+    <p>Lorem ipsum dolor sit </p>
   </div>
 </body>
 </html>
