--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SCSS</title>
   <link rel="stylesheet" href="http://localhost/php/scss/sass/main.css">
-  <!-- Live Sass Compiler -->
+  <!-- Live Sass Compiler - EXTENSION NAME -->
 </head>
 <!-- scss => CSS3 -->
 <!-- sass => css -->
